<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WaterMethanol">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/app_tool_bar"
            android:id="@+id/tool_bar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/startPressureLayout"
                android:layout_below="@id/radiogroup"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/startPressure"
                    android:ellipsize="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activation_pressure"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/EmptyTankLayout"
                android:layout_below="@id/startPressureLayout"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emptytank"
                    android:ellipsize="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empty_safe_boost_limit"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:id="@+id/ratio_compare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmptyTankLayout"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                >
                <TextView
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="1)"
                    android:textSize="18sp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psiLayout"
                    android:layout_width="100dp"
                    android:layout_toRightOf="@+id/one"
                    android:layout_toLeftOf="@+id/ratio"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/psi_ratio"
                        android:ellipsize="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psi"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/ratio"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:text=":"
                    android:layout_toRightOf="@id/targetLayout"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dutycycleLayout"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/ratio"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dutycycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duty_cycle"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ratio_compare2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratio_compare"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                >
                <TextView
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="2)"
                    android:textSize="18sp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psiLayout2"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/two"
                    android:layout_toLeftOf="@id/ratio2"
                    android:layout_marginLeft="8dp"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/psi_ratio2"
                        android:ellipsize="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psi"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/ratio2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:text=":"
                    android:layout_toRightOf="@id/targetLayout"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dutycycleLayout2"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/ratio2"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dutycycle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duty_cycle"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ratio_compare3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratio_compare2"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                >
                <TextView
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="3)"
                    android:textSize="18sp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psiLayout3"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                   android:layout_toRightOf="@id/three"
                    android:layout_toLeftOf="@id/ratio3"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/psi_ratio3"
                        android:ellipsize="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psi"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/ratio3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:text=":"
                    android:layout_toRightOf="@id/targetLayout"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dutycycleLayout3"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/ratio3"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dutycycle3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duty_cycle"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ratio_compare4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratio_compare3"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                >
                <TextView
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="4)"
                    android:textSize="18sp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psiLayout4"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_toRightOf="@id/four"
                    android:layout_toLeftOf="@id/ratio4"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/psi_ratio4"
                        android:ellipsize="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psi"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/ratio4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:text=":"
                    android:layout_toRightOf="@id/targetLayout"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dutycycleLayout4"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/ratio4"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dutycycle4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duty_cycle"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/ratio_compare5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratio_compare4"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                >
                <TextView
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:text="5)"
                    android:textSize="18sp"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psiLayout5"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_toRightOf="@id/five"
                    android:layout_toLeftOf="@id/ratio5"
                    android:layout_marginLeft="8dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/psi_ratio5"
                        android:ellipsize="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psi"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:id="@+id/ratio5"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    android:text=":"
                    android:layout_toRightOf="@id/targetLayout"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dutycycleLayout5"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/ratio5"
                    android:layout_below="@id/setPort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dutycycle5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duty_cycle"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/ratio_compare5"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">
            <Button
                android:id="@+id/advanced_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/advanced_settings"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:background="@drawable/round_button"/>
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/advanced_settings"
                android:layout_marginTop="20dp"
                android:text="Connect and send"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:background="@drawable/round_button"/>
        </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>


</ScrollView>